<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".InsertPiInfoPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/border_5dp_stroke_2dp"
        android:padding="20dp"
        >
        <TextView
            android:id="@+id/description_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/wifi_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_content"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_layout"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/description"
        app:layout_constraintEnd_toEndOf="@id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_5dp_stroke_2dp"
        android:padding="15dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/server_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <TextView
                android:id="@+id/pi_server_label"
                android:text="@string/server_ip_address_label"
                android:textAlignment="viewEnd"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_width="80dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/pi_server"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="RtlCompat" />
            <EditText
                android:id="@+id/pi_server"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/server_ip_address"
                android:textSize="15sp"
                android:background="@drawable/border_5dp_stroke_2dp"
                app:layout_constraintTop_toTopOf="@id/pi_server_label"
                app:layout_constraintStart_toStartOf="@id/pi_server_label"
                app:layout_constraintBottom_toBottomOf="@id/pi_server_label"
                android:padding="5dp"
                android:inputType="text"
                android:importantForAutofill="no" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/id_layout"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/server_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <TextView
                android:id="@+id/pi_id_label"
                android:text="@string/id_label"
                android:gravity="center"
                android:textAlignment="viewEnd"
                android:textSize="15sp"
                android:layout_width="80dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/pi_id"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="RtlCompat" />
            <EditText
                android:id="@+id/pi_id"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:textSize="15sp"
                android:padding="5dp"
                android:background="@drawable/border_5dp_stroke_2dp"
                app:layout_constraintTop_toTopOf="@id/pi_id_label"
                app:layout_constraintStart_toEndOf="@id/pi_id_label"
                app:layout_constraintEnd_toEndOf="parent"
                android:importantForAutofill="no"
                android:inputType="text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pw_layout"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/id_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <TextView
                android:id="@+id/pi_pw_label"
                android:text="@string/password_label"
                android:textAlignment="textEnd"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@id/pi_pw"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="15sp"
                android:layout_width="80dp"
                android:layout_height="0dp"
                tools:ignore="RtlCompat"
                />
            <EditText
                android:id="@+id/pi_pw"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="@id/pi_pw_label"
                app:layout_constraintStart_toEndOf="@id/pi_pw_label"
                android:inputType="textPassword"
                android:padding="5dp"
                android:background="@drawable/border_5dp_stroke_2dp"
                android:importantForAutofill="no" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/insert_complete"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/border_5dp_stroke_2dp"
        android:backgroundTint="@color/main"
        android:text="@string/connect"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:onClick="connect"
        app:layout_constraintTop_toBottomOf="@id/input_layout"
        app:layout_constraintStart_toStartOf="@id/description"
        app:layout_constraintEnd_toEndOf="@id/description"
        tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>