<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".IoTMainPage">
    <ImageView
        android:id="@+id/back"
        android:onClick="backPressed"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:background="@drawable/border_5dp_stroke_2dp"
        android:backgroundTint="@color/main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/arrow_back"
        android:tintMode="multiply"
        android:paddingStart="10dp"
        android:paddingHorizontal="5dp"
        app:tint="@color/white"

        tools:ignore="RtlSymmetry" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/border_5dp_stroke_2dp"
        >
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/start_motor"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/blind_down"
                android:onClick="blindDown"
                android:background="@drawable/border_5dp_stroke_2dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/main"
                tools:ignore="UsingOnClickInXml" />
            <Button
                android:id="@+id/reverse_motor"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/blind_up"
                android:onClick="blindUp"
                android:background="@drawable/border_5dp_stroke_2dp"
                android:backgroundTint="@color/main"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />
            <Button
                android:id="@+id/stop_motor"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/stop"
                android:onClick="blindStop"
                android:background="@drawable/border_5dp_stroke_2dp"
                android:backgroundTint="@color/main"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />
<!--            <Button-->
<!--                android:id="@+id/refresh_ssh"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="70dp"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_margin="10dp"-->
<!--                android:text="@string/refresh"-->
<!--                android:onClick="refresh"-->
<!--                android:background="@drawable/border_5dp_stroke_2dp"-->
<!--                android:backgroundTint="@color/main"-->
<!--                android:textColor="@color/white"-->
<!--                tools:ignore="UsingOnClickInXml" />-->
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading_layout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/border_5dp_stroke_2dp"
        >
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content"
            android:indeterminateTint="@color/main"
            />
        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/main"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/init_loading"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateTint="@color/main"
        />
</androidx.constraintlayout.widget.ConstraintLayout>